--- a/web/src/main/resources/META-INF/piecework/templates/FormView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/FormView.template.html
@@ -4,13 +4,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=8" />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- 	<meta name="viewport" content="width=device-width, initial-scale=0.6, maximum-scale=4.0, user-scalable=yes" /> -->
 	<title><% name %></title>
 	<link href="/piecework/static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="/piecework/static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-<!-- 	<link rel="stylesheet" type="text/css" media="all" href="/piecework/static/css/vendor/jqueryui-smoothness/jquery-ui-1.8.20.custom.css"></link> -->
 	<link rel="stylesheet" type="text/css" media="all" href="/piecework/static/css/piecework.css"></link>
-<!-- 	<link rel="stylesheet" type="text/css" media='screen and (max-width: 700px)' href="/piecework/static/css/piecework.mobile.css"></link> -->
 	<link rel="stylesheet" type="text/css" media="all" href="/piecework/static/css/piecework.form.css"></link>
 	
 	<script id="dialog-template" type="text/x-handlebars-template">
@@ -95,7 +92,7 @@
 	
 	<form id="main-form" method="POST">
 		<div class="screen-header">
-			<div class="userInformation"><% userName %></div>
+			<div class="userInformation"><% user.displayName %></div>
 		</div>
 		<div class="page">
 			<div class="page-toolbar">
