--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -69,7 +69,7 @@
           <div class="well sidebar-nav">
             <ul id="process-list" class="nav nav-list">
               <li class="nav-header">MY PROCESSES</li>
-              <li class="active"><span class="muted"><i>You need to describe one first</i></span></li>
+<!--               <li class="active"><span class="muted"><i>You need to describe one first</i></span></li> -->
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
@@ -162,6 +162,6 @@
 		piecework = {};
 		piecework.context = <%& json %>;
 	</script>
-	<script data-main="<% static %>/js/piecework.index.js" src='<% static %>/js/vendor/require.js'></script>
+	<script data-main="<% static %>/js/piecework-index.js" src='<% static %>/js/vendor/require.js'></script>
   </body>
 </html>
