Working in Chaplin using boilerplate example

--- a/web/src/main/resources/META-INF/piecework/templates/FormView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/FormView.template.html
@@ -135,6 +135,6 @@
 		piecework = {};
 		piecework.context = <%& json %>;
 	</script>
-	<script data-main="<% static %>/js/piecework-form.js" src='<% static %>/js/vendor/require.js'></script>
+	<script data-main="<% static %>/js/form.js" src='<% static %>/js/vendor/require.js'></script>
 </body>
 </html>
