--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -14,6 +14,10 @@
         padding-top: 60px;
         padding-bottom: 40px;
       }
+      .control-group {
+		margin-bottom: 5px;
+	  }
+
       .sidebar-nav {
         padding: 9px 0;
       }
@@ -63,105 +67,62 @@
       </div>
     </div>
 
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
-          <div class="well sidebar-nav">
-            <ul id="process-list" class="nav nav-list">
-              <li class="nav-header">MY PROCESSES</li>
-<!--               <li class="active"><span class="muted"><i>You need to describe one first</i></span></li> -->
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
-        <div class="span9">
-          <div class="hero-unit">
-            <h1>Describe &raquo; Design &raquo; Do.</h1>
-            <br/>
-            <p>
-            	To get started, describe what your process is. Say as little or as much as you want.
-            </p>
-            <br/>
-            <p><a href="#process-description-dialog" class="btn btn-primary btn-large" data-toggle="modal">Start &raquo;</a></p>
-          </div>
-          
-          <!-- 
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-          </div>
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-          </div>
-        </div>-->
-      </div>
-      <hr>
-      <footer>
-        <p></p>
-      </footer>
-
-    </div><!--/.fluid-container-->
-
-	<div id="process-description-dialog" class="modal hide fade">
-	  <div class="modal-header">
-	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	    <h3>Describe &raquo;</h3>
-	  </div>
-	  <div class="modal-body">
-	    <form>
-		  <fieldset>
-		  	<div class="control-group">
-			    <label>Name your process</label>
-			    <div class="controls">
-				    <input class="new-process-label span3" type="text" name="new_process_label" placeholder="Something short and descriptive" required>
-				    <span class="help-inline hide">Required</span>
-			    </div>
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div id="left-frame" class="span2">
+				<div class="process-list well sidebar-nav">
+					
+				</div>
 			</div>
-			<div class="control-group">
-			    <label>Give a summary <span class="muted">(optional)</span></label>
-			    <div class="controls">
-				    <textarea class="new-process-summary span5" name="new_process_summary" placeholder="Provide some more details"></textarea>
-			    </div>
+
+			<div id="main-frame" class="span10">
+				
 			</div>
-		  </fieldset>
-		</form>
-	  </div>
-	  <div class="modal-footer">
-	    <a href="#" class="btn" data-dismiss="modal">Close</a>
-	    <a href="#" class="btn btn-primary">Accept</a>
-	  </div>
+		</div>
+		<hr>
+		<footer>
+			<p></p>
+		</footer>
+
 	</div>
+	<!--/.fluid-container-->
+
+<!-- 	<div id="process-description-dialog" class="modal hide fade"> -->
+<!-- 	  <div class="modal-header"> -->
+<!-- 	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> -->
+<!-- 	    <h3>Describe &raquo;</h3> -->
+<!-- 	  </div> -->
+<!-- 	  <div class="modal-body"> -->
+<!-- 	    <form> -->
+<!-- 		  <fieldset> -->
+<!-- 		  	<div class="control-group"> -->
+<!-- 			    <label>Name your process</label> -->
+<!-- 			    <div class="controls"> -->
+<!-- 				    <input class="new-process-label span3" type="text" name="new_process_label" placeholder="Something short and descriptive" required> -->
+<!-- 				    <span class="help-inline hide">Required</span> -->
+<!-- 			    </div> -->
+<!-- 			</div> -->
+<!-- 			<div class="control-group"> -->
+<!-- 			    <label>Give a summary <span class="muted">(optional)</span></label> -->
+<!-- 			    <div class="controls"> -->
+<!-- 				    <textarea class="new-process-summary span5" name="new_process_summary" placeholder="Provide some more details"></textarea> -->
+<!-- 			    </div> -->
+<!-- 			</div> -->
+<!-- 		  </fieldset> -->
+<!-- 		</form> -->
+<!-- 	  </div> -->
+<!-- 	  <div class="modal-footer"> -->
+<!-- 	    <a href="#" class="btn" data-dismiss="modal">Close</a> -->
+<!-- 	    <a href="#" class="btn btn-primary">Accept</a> -->
+<!-- 	  </div> -->
+<!-- 	</div> -->
 		
-	<script type="text/javascript">
+ 	<script type="text/javascript"> 
 		piecework = {};
 		piecework.context = <%& json %>;
-	</script>
-	<script data-main="<% static %>/js/piecework-index.js" src='<% static %>/js/vendor/require.js'></script>
+ 	</script>
+	<script data-main="<% static %>/js/index.js" src='<% static %>/js/vendor/require.js'></script>
+
+
   </body>
 </html>
